fix alignment of "X" when api is visible

--- a/assets/css/_api.styl
+++ b/assets/css/_api.styl
@@ -84,7 +84,7 @@
   background-color #444
   background-repeat no-repeat
   background-position (med-padding-block + 4) center
-  background-size 14px 15px
+  background-size 15px 14px
   content ''
   cursor pointer
   z-index 12
